# Plugins-Weave

./: .gitignore  CONTRIBUTING.md  LICENSE  README.en.md  README.md
EmailingEssay/: CHANGELOG.md  CLAUDE.md  CONCEPT.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  README.md  SETUP.md  pyproject.toml
EmailingEssay/.claude-plugin/: plugin.json
EmailingEssay/agents/: essay-writer.md  essay_writer.md
EmailingEssay/commands/: essay.md
EmailingEssay/skills/reflect/: SKILL.md
EmailingEssay/skills/send-email/: SKILL.md
EmailingEssay/skills/send-email/scripts/: main.py  py.typed
EmailingEssay/skills/send_email/: SKILL.md
EmailingEssay/skills/send_email/scripts/: .gitignore  main.py  weave_mail.py
EpisodicRAG/: .pre-commit-config.yaml  CHANGELOG.en.md  CHANGELOG.md  CONCEPT.en.md  CONCEPT.md  CONTRIBUTING.en.md  CONTRIBUTING.md  GLOSSARY.en.md  GLOSSARY.md  HANDOFF.md  INDEX.en.md  INDEX.md  README.en.md  README.md  _footer.md  pyproject.toml
EpisodicRAG/.claude/: CLAUDE.md  _footer.md
EpisodicRAG/.claude-plugin/: CLAUDE.md  GrandDigest.template.txt  ShadowGrandDigest.template.txt  config.template.json  last_digest_times.template.json  plugin.json
EpisodicRAG/agents/: README.md  digest-analyzer.md
EpisodicRAG/commands/: README.md  digest.md
EpisodicRAG/docs/: ADVANCED.md  API_REFERENCE.md  ARCHITECTURE.md  FAQ.md  GLOSSARY.en.md  GLOSSARY.md  GUIDE.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md
EpisodicRAG/docs/dev/: API_REFERENCE.md  ARCHITECTURE.md  DESIGN_DECISIONS.md  ERROR_RECOVERY_PATTERNS.md  LEARNING_PATH.md
EpisodicRAG/docs/dev/api/: application.md  config.md  domain.md  infrastructure.md  interfaces.md
EpisodicRAG/docs/user/: ADVANCED.md  CHEATSHEET.en.md  CHEATSHEET.md  FAQ.md  GUIDE.md  QUICKSTART.en.md  QUICKSTART.md  TROUBLESHOOTING.md
EpisodicRAG/scripts/: README.md  __version__.py  check_version.py  config.py  digest_times.py  digest_types.py  exceptions.py  finalize_from_shadow.py  generate_digest_auto.sh  grand_digest.py  pytest.ini  save_provisional_digest.py  setup.sh  shadow_grand_digest.py  utils.py  validators.py
EpisodicRAG/scripts/application/: __init__.py  validators.py
EpisodicRAG/scripts/application/config/: __init__.py  config_builder.py  config_validator.py  level_path_service.py  source_path_resolver.py  threshold_provider.py
EpisodicRAG/scripts/application/finalize/: __init__.py  digest_builder.py  persistence.py  provisional_loader.py  shadow_validator.py
EpisodicRAG/scripts/application/grand/: __init__.py  grand_digest.py  shadow_grand_digest.py
EpisodicRAG/scripts/application/shadow/: __init__.py  cascade_orchestrator.py  cascade_processor.py  components.py  file_appender.py  file_detector.py  (+5 more)
EpisodicRAG/scripts/config/: __init__.py  cli.py  config_loader.py  config_repository.py  config_validator.py  constants.py  directory_validator.py  error_messages.py  exceptions.py  level_path_service.py  path_resolver.py  plugin_root_resolver.py  source_path_resolver.py  threshold_provider.py  types.py  validation.py
EpisodicRAG/scripts/domain/: __init__.py  constants.py  error_formatter.py  exceptions.py  file_constants.py  file_naming.py  level_behaviors.py  level_registry.py  protocols.py  text_utils.py  types.py  validation.py  validation_helpers.py  version.py
EpisodicRAG/scripts/finalize/: __init__.py  digest_builder.py  persistence.py  provisional_loader.py  shadow_validator.py
EpisodicRAG/scripts/infrastructure/: __init__.py  error_handling.py  file_scanner.py  json_repository.py  logging_config.py  structured_logging.py  user_interaction.py
EpisodicRAG/scripts/interfaces/: __init__.py  config_cli.py  digest_auto.py  digest_config.py  digest_entry.py  digest_readiness.py  digest_setup.py  finalize_from_shadow.py  find_plugin_root.py  interface_helpers.py  save_provisional_digest.py  shadow_state_checker.py  update_digest_times.py
EpisodicRAG/scripts/shadow/: __init__.py  file_detector.py  shadow_io.py  shadow_updater.py  template.py
EpisodicRAG/scripts/test/: TESTING.md  conftest.py  test_cascade_processor.py  test_check_version.py  test_config.py  test_config_repository.py  test_constants.py  test_digest_builder.py  test_digest_times.py  test_directory_validator.py  test_e2e_workflow.py  test_exceptions.py  test_file_appender.py  test_file_detector.py  test_file_naming.py  test_file_naming_properties.py  test_file_scanner.py  test_finalize_from_shadow.py  test_grand_digest.py  test_helpers.py  test_interface_helpers.py  test_json_repository.py  test_json_repository_properties.py  test_level_path_service.py  test_logging_config.py  test_path_integration.py  test_path_resolver.py  test_persistence.py  test_placeholder_manager.py  test_plugin_root_resolver.py  test_provisional_loader.py  test_save_provisional_digest.py  test_shadow_grand_digest.py  test_shadow_io.py  test_shadow_updater.py  test_shadow_validator.py  test_source_path_resolver.py  test_template.py  test_threshold_provider.py  test_utils.py  (+2 more)
EpisodicRAG/scripts/tools/: __init__.py  check_footer.py  generate_api_docs.py  link_checker.py  validate_json.py
EpisodicRAG/skills/: README.md
EpisodicRAG/skills/digest-auto/: SKILL.md
EpisodicRAG/skills/digest-config/: SKILL.md
EpisodicRAG/skills/digest-setup/: SKILL.md
EpisodicRAG/skills/shared/: _common-concepts.md  _footer.md  _implementation-notes.md
EpisodicRAG/templates/: CLAUDE.md.template  setup.sh
VisualExpression/: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.jp.md  README.md  pyproject.toml
VisualExpression/.claude-plugin/: plugin.json
VisualExpression/commands/: expression.md
VisualExpression/scripts/: build_html.py  generate_json.py
VisualExpression/skills/: ExpressionImages.json  SKILL.md  VisualExpressionUI.html  VisualExpressionUI.template.html
VisualExpression/skills/auto-expression/: SKILL.md
VisualExpression/skills/expression-forge/: SKILL.md
VisualExpression/skills/scripts/: AnalyzeExpressionOffset.jp.md  AnalyzeExpressionOffset.md  MetaGenerateExpression.jp.md  MetaGenerateExpression.md
VisualExpression/templates/: ExpressionUI.template.html
(+389 files in other folders)
